function(add_phase0_test name target)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE ${target})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_phase0_test(test_gmp_header_smoke gmpxx_mkII)
add_phase0_test(test_mpfr_header_smoke mpfrxx_mkII)
add_phase0_test(test_aggregator_header_smoke gmpfrxx_mkII)
add_phase0_test(test_namespace_aliases mpfrxx_mkII)
add_phase0_test(test_header_boundaries gmpfrxx_mkII)
target_compile_definitions(test_header_boundaries PRIVATE
    GMPFRXX_MKII_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
)
add_phase0_test(test_version_info gmpfrxx_mkII)
add_phase0_test(test_integer_model_diagnostics gmpxx_mkII)
add_phase0_test(test_abi_fingerprint gmpfrxx_mkII)
add_phase0_test(test_alias_safety gmpfrxx_mkII)
add_phase0_test(test_comparisons gmpxx_mkII)
add_phase0_test(test_compound_assign gmpxx_mkII)
add_phase0_test(test_exception_support gmpxx_mkII)
add_phase0_test(test_random gmpxx_mkII)
add_phase0_test(test_et_contract_mpfr mpfrxx_mkII)
add_phase0_test(test_mpfr_expression_eval mpfrxx_mkII)
add_phase0_test(test_mpfr_precision_policy mpfrxx_mkII)
add_phase0_test(test_mpfr_aliasing mpfrxx_mkII)
add_phase0_test(test_mpfr_random mpfrxx_mkII)
add_phase0_test(test_et_contract_mpfr_scalar mpfrxx_mkII)
add_phase0_test(test_mpfr_scalar_eval mpfrxx_mkII)
add_phase0_test(test_mpfr_long_width_dispatch mpfrxx_mkII)
add_phase0_test(test_mpfr_alloc_count mpfrxx_mkII)
set_tests_properties(test_mpfr_alloc_count PROPERTIES RUN_SERIAL TRUE LABELS alloc-count)
add_phase0_test(test_mpfr_comparisons mpfrxx_mkII)
add_phase0_test(test_mpfr_compound_assign mpfrxx_mkII)
add_phase0_test(test_mpfr_exception_support mpfrxx_mkII)
add_phase0_test(test_mpfr_defaults mpfrxx_mkII)
add_phase0_test(test_mpfr_environment mpfrxx_mkII)
add_phase0_test(test_mpfr_environment_invalid mpfrxx_mkII)
add_phase0_test(test_mpfr_string_io mpfrxx_mkII)
add_phase0_test(test_et_contract_mpf gmpxx_mkII)
add_phase0_test(test_mpf_basic gmpxx_mkII)
add_phase0_test(test_mpf_precision_policy gmpxx_mkII)
add_phase0_test(test_mpf_aliasing gmpxx_mkII)
add_phase0_test(test_mpf_string_io gmpxx_mkII)
add_phase0_test(test_mpf_alloc_count gmpxx_mkII)
set_tests_properties(test_mpf_alloc_count PROPERTIES RUN_SERIAL TRUE LABELS alloc-count)
add_phase0_test(test_mpf_pi gmpxx_mkII)
add_phase0_test(test_mpf_compute_log gmpxx_mkII)
add_phase0_test(test_construction_copy gmpfrxx_mkII)
add_phase0_test(test_et_contract_mpfc gmpxx_mkII)
add_phase0_test(test_mpfc_basic gmpxx_mkII)
add_phase0_test(test_mpfc_precision_policy gmpxx_mkII)
add_phase0_test(test_mpfc_header_boundary gmpxx_mkII)
add_phase0_test(test_mpfc_math gmpxx_mkII)
add_phase0_test(test_mpfc_io gmpxx_mkII)
add_phase0_test(test_et_contract_zq_mpf gmpxx_mkII)
add_phase0_test(test_mixed_zq_mpf_promotion gmpxx_mkII)
add_phase0_test(test_et_contract_zq_mpfr mpfrxx_mkII)
add_phase0_test(test_mpz_basic gmpxx_mkII)
add_phase0_test(test_mpz_addmul_fusion mpfrxx_mkII)
add_phase0_test(test_mpz_addmul_alloc_count mpfrxx_mkII)
set_tests_properties(test_mpz_addmul_alloc_count PROPERTIES RUN_SERIAL TRUE LABELS alloc-count)
add_phase0_test(test_mpq_basic gmpxx_mkII)
add_phase0_test(test_mpq_canonicalization gmpxx_mkII)
add_phase0_test(test_zq_string_io gmpxx_mkII)
add_phase0_test(test_mpz_mpq_alloc_count mpfrxx_mkII)
add_phase0_test(test_mixed_zq_mpfr_promotion mpfrxx_mkII)
add_phase0_test(test_mixed_zq_mpfr_exact_subexpression mpfrxx_mkII)
add_phase0_test(test_et_contract_mpc mpfrxx_mkII)
add_phase0_test(test_mpc_basic mpfrxx_mkII)
add_phase0_test(test_mpc_aliasing mpfrxx_mkII)
add_phase0_test(test_mpc_defaults mpfrxx_mkII)
add_phase0_test(test_mpc_environment mpfrxx_mkII)
add_phase0_test(test_mpc_environment_invalid mpfrxx_mkII)
add_phase0_test(test_mpc_precision_policy mpfrxx_mkII)
add_phase0_test(test_mpc_io mpfrxx_mkII)

function(add_compile_fail_test name target)
    set(source "${CMAKE_CURRENT_SOURCE_DIR}/compile_fail/${name}.cpp")
    set(output "${CMAKE_CURRENT_BINARY_DIR}/${name}.o")
    add_test(
        NAME compile_fail_${name}
        COMMAND ${CMAKE_CXX_COMPILER}
            -std=c++17
            -I${CMAKE_SOURCE_DIR}/include
            -I${GMP_INCLUDE_DIR}
            -I${MPFR_INCLUDE_DIR}
            -I${MPC_INCLUDE_DIR}
            -c "${source}"
            -o "${output}"
    )
    set_tests_properties(compile_fail_${name} PROPERTIES WILL_FAIL TRUE)
endfunction()

add_compile_fail_test(mpfr_header_must_not_expose_mpf mpfrxx_mkII)
add_compile_fail_test(mpfr_header_must_not_expose_mpfc mpfrxx_mkII)
add_compile_fail_test(gmp_header_must_not_expose_mpfr_or_mpc gmpxx_mkII)
add_compile_fail_test(test_bool_scalar mpfrxx_mkII)
add_compile_fail_test(test_long_double_scalar mpfrxx_mkII)
add_compile_fail_test(test_int128_scalar mpfrxx_mkII)
add_compile_fail_test(test_scalar_scalar_et_operator mpfrxx_mkII)
add_compile_fail_test(test_mpf_plus_mpfr gmpfrxx_mkII)
add_compile_fail_test(test_mpfr_plus_mpf gmpfrxx_mkII)
add_compile_fail_test(test_mpf_plus_mpc gmpfrxx_mkII)
add_compile_fail_test(test_mpc_plus_mpf gmpfrxx_mkII)
add_compile_fail_test(test_mpfc_plus_mpfr gmpfrxx_mkII)
add_compile_fail_test(test_mpfr_plus_mpfc gmpfrxx_mkII)
add_compile_fail_test(test_mpfc_plus_mpc gmpfrxx_mkII)
add_compile_fail_test(test_mpc_plus_mpfc gmpfrxx_mkII)
